--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <h2 class="about-card-title"><i class="fa-solid fa-people-group"></i> History of collaboration</h2>
                 <p class="about-card-content">Launched by Latin America Northeast Libraries Network (LANE) during the COVID-19 lockdown, LACLI has grown to become an international collaboration aimed at sharing digital resources across borders. We were joined by La Biblioteca Daniel Cosío Villegas at El Colegio de México in 2020 and the Centro de Pesquisa e Documentação de História Contemporânea do Brasil (CPDOC) at Fundação Getulio Vargas in 2022.</p>
                 <div class="about-card-links-wrapper">
-                    <a href="mailto:lacliproject@google.com?subject=Volunteer%20for%20LACLI" target="_blank" rel="noopener noreferrer" class="about-card-link"><i class="fa-solid fa-person-walking"></i> Volunteer</a>
+                    <a href="contact.html" class="about-card-link"><i class="fa-solid fa-person-walking"></i> Volunteer</a>
                 </div>
             </div>
 
