updates with Cate and Jesus notes

--- a/about.html
+++ b/about.html
@@ -40,22 +40,22 @@
         <section class="about-cards-wrapper">
             <div class="about-card">
                 <h2 class="about-card-title"><i class="fa-solid fa-earth-americas"></i> Subject area specialization</h2>
-                <p class="about-card-content">We've indexed 1,300+ free online resources for Latin American, Caribbean, Latinx, and Iberian studies, including audiovisual collections, books, data, ephemera, government documents, oral histories, periodicals, reference works, artworks, and web archives.</p>
+                <p class="about-card-content">We facilitate the discovery of free online resources for students and scholars of Latin American, Caribbean, Latinx, and Iberian studies across the social sciences, natural sciences, and humanities. To date, we've indexed 1,300+ audiovisual collections, books, data, ephemera, government documents, oral histories, periodicals, reference works, visual materials, and web archives.</p>
                 <div class="about-card-links-wrapper">
-                    <a class="about-card-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfJGksX1uBHoNNTHSPsRv9wQp4K0yYc4a-OmLMUrciXYqfwMg/viewform" target="_blank"><i class="fa-solid fa-square-plus"></i> Add a resource</a>
+                    <a class="about-card-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfJGksX1uBHoNNTHSPsRv9wQp4K0yYc4a-OmLMUrciXYqfwMg/viewform" target="_blank"><i class="fa-solid fa-circle-plus"></i> Add a resource</a>
                 </div>  
             </div>
 
             <div class="about-card">
                 <h2 class="about-card-title"><i class="fa-solid fa-people-group"></i> History of collaboration</h2>
-                <p class="about-card-content">Launched by Latin America Northeast Libraries Network (LANE) during the COVID-19 lockdown, LACLI has grown to become an international collaboration aimed at sharing digital resources across borders. We were joined by La Biblioteca Daniel Cosío Villegas at El Colegio de México in 2020 and the Centro de Pesquisa e Documentação de História Contemporânea do Brasil (CPDOC) at Fundação Getulio Vargas in 2022.</p>
+                <p class="about-card-content">Launched by Latin America Northeast Libraries Network (<a href="https://salalm.org/lane" target="_blank" rel="noopener noreferrer">LANE</a>) during the COVID-19 lockdown, LACLI has grown to become an international collaboration aimed at sharing digital resources across borders. We were joined by our collaborating partners <a href="https://biblioteca.colmex.mx/" target="_blank" rel="noopener noreferrer">La Biblioteca Daniel Cosío Villegas</a> at El Colegio de México in 2020 and the Centro de Pesquisa e Documentação de História Contemporânea do Brasil (<a href="https://cpdoc.fgv.br/" target="_blank" rel="noopener noreferrer">CPDOC</a>) at Fundação Getulio Vargas in 2022.</p>
                 <div class="about-card-links-wrapper">
                     <a href="contact.html" class="about-card-link"><i class="fa-solid fa-person-walking"></i> Volunteer</a>
                 </div>
             </div>
 
             <div class="about-card">
-                <h2 class="about-card-title"><i class="fa-solid fa-lock-open"></i> Open, top to bottom</h2>
+                <h2 class="about-card-title"><i class="fa-solid fa-lock-open"></i> Committed to open</h2>
                 <p class="about-card-content">LACLI is licensed under CC BY-NC-SA 4.0.  Recognizing the need for shared, reusable data to create tailored research support content (e.g., subject guides, pedagogical guides), LACLI invites you to use our open data to start building your own projects.
                 <div class="about-card-links-wrapper">
                     <a href="https://docs.google.com/spreadsheets/d/17ngPVWCOFe4YpuDWhP37JJQIFIrrDL0qYbX28iLneWo/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="about-card-link"><i class="fa-solid fa-database"></i> Data</a>
@@ -100,7 +100,6 @@ const qcTeam = [
     {"firstName": "Jesús", "lastName": "Alonso-Regalado", "affiliation": "Quality control coordinator. LANE member. University at Albany, SUNY"},
     {"firstName": "Anabel", "lastName": "Gutiérrez", "affiliation": "LANE member"},
     {"firstName": "Cate", "lastName": "Kellett", "affiliation": "LANE member. Yale Law Library"},
-    {"firstName": "Sonia", "lastName": "Morcillo", "affiliation": "Cambridge University Library"},
 ];
 const collaborators = [
     {"firstName": "Fernando", "lastName": "Acosta-Rodríguez", "affiliation": "LANE member. Princeton University"},
