--- a/impact.html
+++ b/impact.html
@@ -40,21 +40,20 @@
             <h1 id="header-1">Impact</h1>
             <div id="awards-display"></div>
             <section class="impact-story-wrapper">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/WYhmkKhJWVY?si=2Wt3YC7bl7a_TwZR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/WYhmkKhJWVY?si=2Wt3YC7bl7a_TwZR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               <div class="impact-news-item">
                 <h2>Experiential Learning</h2>
-                <p>Students from United States and Brazil have contributed to indexing LACLI resources as part of experiential learning opportunities. <a href="https://www.albany.edu/news-center/news/2024-ualbany-faculty-students-build-online-repository-latin-american-caribbean" target="_blank" rel="noopener noreferrer">Read more about the work of students at SUNY Albany</a>. The LACLI team has also hosted trainings and edit-a-thons across the United States, Mexico, Peru, Ecuador, and Spain.</p>
+                <p>Students from the United States, Mexico, and Brazil have contributed to indexing LACLI resources as part of experiential learning opportunities. <a href="https://www.albany.edu/news-center/news/2024-ualbany-faculty-students-build-online-repository-latin-american-caribbean" target="_blank" rel="noopener noreferrer">Read more about the work of students at the University at Albany, SUNY</a>. The LACLI team has also hosted trainings and edit-a-thons across Argentina, Mexico, Spain, and the United States.</p>
               </div>
             </section>
-  
+
             <h2 class="features-display-heading">LACLI has been featured by:</h2>
             <div id="features-display"></div>
         </div>
             
     </main>
-
 <footer class="footer-main" id="footer-main"></footer>
-    
+
 <script src="header.js"></script>
 <script src="footer.js"></script>
 <script src="scripts/navigation.js"></script>
@@ -63,10 +62,10 @@
 </body>
 <script>
 const awards = [
-    {"year": "2024", "name": "Minerva Center Innovation Funding", "url": "https://www.albany.edu/minerva-center", "description": "Experiential Learning for UAlbany undergraduate students."},
     {"year": "2024", "name": "UCLA Lessons for Librarians in Open Science", "url": "https://ucla-imls-open-sci.info/", "description": "UCLA Library, with funding from the Institute of Museum and Library Services, invited authors to create lessons on open science topics for librarians."},
     {"year": "2024", "name": "LASA Section Awards: Best Public Project", "url": "https://sections.lasaweb.org/sections/scholarly-research-resources/?pg=6", "description": "Presented by the Archives, Libraries and Digital Scholarship Section."},
-    {"year": "2023", "name": "DH Awards: Best DH Dataset", "url": "", "description": "For best corpus of texts, table of data, or similar used for DH research."},
+    {"year": "2024", "name": "Minerva Center Innovation Funding", "url": "https://www.albany.edu/minerva-center", "description": "Experiential Learning for UAlbany undergraduate students."},
+    {"year": "2023", "name": "DH Awards: Best DH Dataset", "url": "http://dhawards.org/dhawards2023/results/", "description": "For best corpus of texts, table of data, or similar used for DH research."},
     {"year": "2022", "name": "SALALM Institutional Collaborative Initiatives Award", "url": "https://salalm.org/blog_home.asp?display=804", "description": "For outstanding collaborative or partnership initiatives for new or ongoing projects involving several educational, research, or other non-profit organizations, with at least one being in Latin America, the Caribbean, or the Iberian Peninsula."},
 ];
 
