--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+    body    {overflow-y: auto;}
     button {
         cursor: pointer;
     }
@@ -208,6 +209,20 @@
         <div>
             <h3 class="facet-accordion-header">Subjects in English +</h3>
             <div id="subjects-eng-facet" class="facet-accordion-content">
+                <p>Loading...</p>
+            </div>
+        </div>
+          <!-- Materias_en_Español Accordion -->
+        <div>
+            <h3 class="facet-accordion-header">Materias en Español +</h3>
+            <div id="materias-en-espanol-facet" class="facet-accordion-content">
+                <p>Loading...</p>
+            </div>
+        </div>
+          <!-- Assuntos em Portugues Accordion -->
+        <div>
+            <h3 class="facet-accordion-header">Assuntos em Portugues +</h3>
+            <div id="assuntos-em-portugues-facet" class="facet-accordion-content">
                 <p>Loading...</p>
             </div>
         </div>
