--- a/help.html
+++ b/help.html
@@ -42,13 +42,22 @@
         <div class="help-accordion-wrapper">
             <button class="help-accordion-btn" tabindex="0" id="btn-1">How does the library search feature work?</button>
             <div class="help-accordion-panel">
-                <ul>
-                    <li id="li-1-1">Searches are not case sensitive and ignore diacritics.</li>
-                    <li id="li-1-2">Truncation, wildcards, quotation marks, and lemmatization are not supported. It is preferable to search with singular rather than plural nouns.</li>
-                    <li id="li-1-3">Search terms separated by a space are treated as independent search terms and are linked with the AND operator.</li>
-                    <li id="li-1-4">All search terms must appear somewhere in the resource description fields for a resource to be returned in the results.</li>
-                    <li id="li-1-5">To save a search, copy the url from the results page or use the export button to download the results as a JSON file.</li>
-                </ul>
+                <h3><i class="fa-solid fa-magnifying-glass"></i> Keywords</h3>
+                    <ul>
+                        <li>Searches are not case sensitive and ignore diacritics.</li>
+                        <li>Truncation, wildcards, quotation marks, and lemmatization are not supported.</li>
+                        <li>It is preferable to search with singular rather than plural nouns.</li>
+                        <li>Search terms separated by a space are treated as independent search terms and are linked with the AND operator. Therefore, all search terms must appear in at least one description field for a resource to be returned in the results.</li>
+                    </ul>
+                <h3><i class="fa-solid fa-sliders"></i> Filters</h3>
+                    <ul>
+                    <li>When a user selects multiple values from the same filter, such as two languages, LACLI uses OR logic. This means it shows results that match at least one of the selected values (e.g., Spanish OR English).</li>
+                    <li>When a user selects values from different filters, like a format and a language, LACLI uses AND logic. This narrows the results to only those that match all of the selected criteria (e.g., Books AND Spanish).</li>
+                    </ul>
+                <h3><i class="fa-solid fa-floppy-disk"></i> Saving</h3>
+                    <ul>
+                    <li>There are two ways to save a search. First, copy the url. Only keywords, and not filters, are captured in the url. Second, download the records currently displayed as a JSON file to your computer via the Download button.</li>
+                    </ul>
             </div>
             <button class="help-accordion-btn" tabindex="0" id="btn-2">What are some questions I can answer with LACLI?</button>
             <div id="help-questions" class="help-accordion-panel">
