port trans to library

--- a/library.html
+++ b/library.html
@@ -49,7 +49,7 @@
             <input type="text" id="library-search" placeholder="Enter keywords...">
             <button class="refresh-btn" id="x-btn"><i class="fa-solid fa-xmark"></i></button>
             <button id="library-search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <button id="search-help-btn" title="Search help"><i class="fa-regular fa-circle-question"></i></button>
+            <button id="search-help-btn" title="Help"><i class="fa-regular fa-circle-question"></i></button>
         </div>
         <!-- Search Help Modal -->
         <div id="search-help" class="modal">
